--- a/translation/dest/tp-TP/mobile-misc.yaml
+++ b/translation/dest/tp-TP/mobile-misc.yaml
@@ -1,6 +1,10 @@
 tp-TP:
   apiUnsupported: "ilo kon \"lichess\" pi ilo toki sina li kama tan tenpo pini mute a! o kama jo e ante sin."
   apiDeprecated: "o kama jo e ante sin pi ilo kon \"lichess\"! sina pali ala e ni la, ona li pini pali lon tenpo %s."
+  comments: "toki sin"
+  gameInformation: "sona musi"
+  home: "lipu lawa"
+  lastScore: "nanpa pi musi pini: %s"
   playerisInvitingYou: "jan %s li wile musi lon poka sina"
   unsupportedVariant: "ante ni pi ilo kon \"lichess\" ni li sona ala e ante \"%s\""
   notesSynchronizationHasFailed: "mi ken ala linja e sitelen musi pi ilo ni, e sitelen musi pi ilo lawa \"lichess\". o pali sin lon tenpo kama."
@@ -12,3 +16,9 @@ tp-TP:
   positionRight: "poka teje" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "poka soto" #As in "left-hand side"; not political or past participle
   landscapeBoardSide: "poka sama pi supa musi" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
+  toggleSound: "o ante: kalama li lon ala lon?" #Settings to enable/disable sound
+  overTheBoard: "musi pi jan tu pi ilo toki wan"
+  sharePgn: "o pana e lipu PGN tawa jan ante"
+  shareGameUrl: 'o pana e nimi nasin musi'
+  playOnline: "o musi kepeken linja sona"
+  playOffline: "o musi kepeken linja sona ala"
