--- a/translation/dest/vi-VN/mobile-misc.yaml
+++ b/translation/dest/vi-VN/mobile-misc.yaml
@@ -1,5 +1,5 @@
 vi-VN:
-  apiUnsupported: "Phiên bản ứng dụng lichess của bạn quá cũ! Vui lòng nâng cấp miễn phí lên phiên bản mới nhất."
+  apiUnsupported: "Phiên bản ứng dụng lichess của bạn quá cũ! Vui lòng cập nhật miễn phí lên phiên bản mới nhất."
   apiDeprecated: "Nâng cấp miễn phí lên phiên bản mới nhất của lichess! Hỗ trợ cho phiên bản này có ở %s."
   gameInformation: "Thông tin ván đấu"
   home: "Trang chủ"
