--- a/translation/dest/bn-BD/mobile-misc.yaml
+++ b/translation/dest/bn-BD/mobile-misc.yaml
@@ -1,1 +1,8 @@
 bn-BD:
+  apiUnsupported: "আপনার লিচেস্‌ অ্যাপের ভার্সন অনেক পুরনো! দয়া করে সর্বশেষ ভার্সনে হালনাগাদ করুন ফ্রিতে ।"
+  apiDeprecated: "ফ্রিতে লিচেস্‌ অ্যাপ সর্বশেষ ভার্সনে হালনাগাদ করুন ! %s তারিখে এই ভার্সনের সাপোর্ট বন্ধ হয়ে যাবে । "
+  comments: "মন্তব্য"
+  gameInformation: "খেলা তথ্য"
+  home: "হোম"
+  lastScore: "শেষ স্কোর​ %s"
+  playerisInvitingYou: "%s আপনাকে আমন্ত্রণ জানিয়েছে"
