--- a/translation/dest/de-DE/mobile-misc.yaml
+++ b/translation/dest/de-DE/mobile-misc.yaml
@@ -10,7 +10,7 @@ de-DE:
   notesSynchronizationHasFailed: "Die Synchronisation der Anmerkungen mit Lichess ist fehlgeschlagen, bitte versuche es später erneut."
   vibrateOnGameEvents: "Bei Spielereignissen vibrieren"
   offline: "Offline"
-  otbUseSymmetricPieces: "Benutze symmetrische Figuren" #Setting for offline over-the-board games
+  otbUseSymmetricPieces: "Verwende symmetrische Figuren" #Setting for offline over-the-board games
   otbFlipPiecesAndInfoAfterMove: "Drehe Figuren und Gegnerinfo nach dem Zug" #Setting for offline over-the-board games
   settingsClockPosition: "Uhrposition" #Determines whether each player's time is shown on the left or right side of the board
   positionRight: "Rechts" #As in "right-hand side"; not truth, morality, or law
