Sync background theme with system settings

--- a/translation/source/mobile-misc.yaml
+++ b/translation/source/mobile-misc.yaml
@@ -22,3 +22,4 @@ en-GB:
   shareGameUrl: 'Share game URL'
   playOnline: "Play online"
   playOffline: "Play offline"
+  bgThemeSyncWithSystem: "Sync with system"
