--- a/translation/dest/it-IT/mobile-misc.yaml
+++ b/translation/dest/it-IT/mobile-misc.yaml
@@ -22,3 +22,4 @@ it-IT:
   shareGameUrl: 'Condividi URL della partita'
   playOnline: "Gioca online"
   playOffline: "Gioca offline"
+  bgThemeSyncWithSystem: "Sincronizza" #Settings to synchronise background theme (dark or light) with the operating system (to support daynight automatic switch)
