--- a/translation/dest/mk-MK/mobile-misc.yaml
+++ b/translation/dest/mk-MK/mobile-misc.yaml
@@ -1,1 +1,12 @@
 mk-MK:
+  apiUnsupported: "Вашата верзија на апликацијата lichess е премногу стара! Надградете ја бесплатно на најновата верзија."
+  apiDeprecated: "Бесплатно надградете ја верзијата на вашата lichess апликација! Поддршката за оваа верзија ќе престане на %s."
+  comments: "Коментари"
+  gameInformation: "Информации за играта"
+  home: "Почетна"
+  lastScore: "Последен резултат: %s"
+  playerisInvitingYou: "%s iВе поканува"
+  unsupportedVariant: "Варијацијата %s не е поддржана во оваа верзија"
+  notesSynchronizationHasFailed: "Синхронизаијата на белешки со Lichess беше неуспешна, Ве молиме пробајте повторно подоцна."
+  vibrateOnGameEvents: "Вибрации при настани во играта"
+  offline: "Офлајн"
