--- a/translation/dest/nl-NL/mobile-misc.yaml
+++ b/translation/dest/nl-NL/mobile-misc.yaml
@@ -22,3 +22,4 @@ nl-NL:
   shareGameUrl: 'Partij URL delen'
   playOnline: "Online spelen"
   playOffline: "Offline spelen"
+  bgThemeSyncWithSystem: "Synchroniseren met systeem" #Settings to synchronise background theme (dark or light) with the operating system (to support daynight automatic switch)
