--- a/translation/dest/or-IN/mobile-misc.yaml
+++ b/translation/dest/or-IN/mobile-misc.yaml
@@ -19,3 +19,4 @@ or-IN:
   shareGameUrl: 'ଖେଳ URL ଅଂଶୀଦାର କରନ୍ତୁ'
   playOnline: "ଅନଲାଇନ୍ ଖେଳନ୍ତୁ"
   playOffline: "ଅଫଲାଇନ୍ ଖେଳନ୍ତୁ"
+  bgThemeSyncWithSystem: "ସିଷ୍ଟମ୍ ସହ ଖାପ ଖୁଆଇବା" #Settings to synchronise background theme (dark or light) with the operating system (to support daynight automatic switch)
