--- a/translation/dest/tlh-AA/mobile-misc.yaml
+++ b/translation/dest/tlh-AA/mobile-misc.yaml
@@ -1,1 +1,2 @@
 tlh-AA:
+  bgThemeSyncWithSystem: "pat meymoH" #Settings to synchronise background theme (dark or light) with the operating system (to support daynight automatic switch)
