--- a/translation/dest/be-BY/mobile-misc.yaml
+++ b/translation/dest/be-BY/mobile-misc.yaml
@@ -22,3 +22,4 @@ be-BY:
   shareGameUrl: 'Падзяліцца спасылкай на гульню'
   playOnline: "Гуляць анлайн"
   playOffline: "Гуляць афлайн"
+  bgThemeSyncWithSystem: "Сінхранізацыя з сістэмай" #Settings to synchronise background theme (dark or light) with the operating system (to support daynight automatic switch)
