--- a/translation/dest/eo-UY/mobile-misc.yaml
+++ b/translation/dest/eo-UY/mobile-misc.yaml
@@ -1,9 +1,15 @@
 eo-UY:
   apiUnsupported: "Via versio de Lichess apon estas tro malnova! Bonvolu senpage aktualigi al la lasta versio."
   apiDeprecated: "Senpage aktualiĝu al la lasta lichess apo! Apogo por tiu ĉi versio finiĝos la %s."
+  comments: "Komentoj"
+  gameInformation: "Informo de la ludo"
+  lastScore: "Lasta poentaro: %s"
   playerisInvitingYou: "%s invitas vin"
   vibrateOnGameEvents: "Vibri en eventaj ludoj"
   offline: "Nekonektita"
   settingsClockPosition: "Horloĝa pozicio" #Determines whether each player's time is shown on the left or right side of the board
   positionRight: "Dekstra" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "Maldekstra" #As in "left-hand side"; not political or past participle
+  overTheBoard: "Ludi fizike kun aliulo"
+  sharePgn: "Disdoni PGN"
+  shareGameUrl: 'Disdoni URL de la ludo'
